# ext-case-converter

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
lang/en_US/LC_MESSAGES/: ext-case-converter.po  slint-rust-template.po
lang/zh_CN/LC_MESSAGES/: ext-case-converter.po  slint-rust-template.po
src/: config.rs  file_handler.rs  i18n.rs  main.rs  ui_handlers.rs
ui/: about.slint  app-window.slint  main.slint  settings.slint
