[package]
name = "ext-case-converter"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.4", features = ["gettext"] }
walkdir = "2.5.0"
rfd = "0.15.4"
toml = "0.9.5"

[build-dependencies]
slint-build = "1.12.1"
